# smaji_gsd

./: .gitignore  README.adoc  gsd.xsd  sample.gsd  smaji_gsd.opam
src/: dune  rect.ml  smaji_gsd.ml  stroke.ml  stroke_black.ml  stroke_def.ml  stroke_ming.ml  typeface.ml  utils.ml
